@@ -1,7 +1,9 @@
 package ru.whattime.whattime.service;
 
 import lombok.RequiredArgsConstructor;
+import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
+import org.springframework.web.server.ResponseStatusException;
 import ru.whattime.whattime.dto.EventDto;
 import ru.whattime.whattime.dto.IntervalDto;
 import ru.whattime.whattime.mapper.EventMapper;
@@ -14,9 +16,12 @@ import ru.whattime.whattime.repository.IntervalRepository;
 import ru.whattime.whattime.repository.UserRepository;
 
 import javax.transaction.Transactional;
+import java.time.LocalDateTime;
+import java.util.Comparator;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -43,7 +48,7 @@ public class EventService {
     }
 
     @Transactional
-    public boolean putIntervals(List<IntervalDto> intervalDtoList, String eventId) {
+    public void putIntervals(List<IntervalDto> intervalDtoList, String eventId) {
         User user = userRepository.getReferenceById(userService.getCurrentUser().getId());
 
         Optional<Event> optionalEvent = eventRepository.findEventByUuid(UUID.fromString(eventId));
@@ -54,14 +59,45 @@ public class EventService {
                 interval.setEvent(optionalEvent.get());
                 interval.setOwner(user);
 
+
                 return interval;
-            }).toList();
+            }).collect(Collectors.toList());
+
+            if (!checkIntervals(intervals)) {
+                throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Bad intervals content");
+            }
 
             intervalRepository.saveAll(intervals);
+        } else {
+            throw new ResponseStatusException(HttpStatus.NOT_FOUND, "Event not exists");
+        }
+    }
 
-            return true;
+    private boolean checkIntervals(List<Interval> intervals) {
+        intervals.sort(Comparator.comparing((Interval::getStartTime)));
+
+        for (int i = 0; i < intervals.size(); i++) {
+            Interval interval = intervals.get(i);
+
+            LocalDateTime startTime = interval.getStartTime();
+            LocalDateTime endTime = interval.getEndTime();
+
+            if (endTime.isBefore(startTime)) {
+                return false;
+            }
+
+            if (startTime.isBefore(LocalDateTime.now())) {
+                return false;
+            }
+
+            if (i != intervals.size()) {
+                if (endTime.isBefore(intervals.get(i + 1).getStartTime())) {
+                    return false;
+                }
+            }
         }
 
-        return false;
+        return true;
+
     }
 }
